[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/icons/menu/star_1.png" type="Texture" id=1]
[ext_resource path="res://scripts/menu/MenuButton.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=7]
content_margin_left = 24.0
content_margin_right = 24.0

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 12.0
content_margin_right = 12.0
bg_color = Color( 0.858824, 0.156863, 0.109804, 1 )

[node name="Button" type="Button"]
margin_right = 194.0
margin_bottom = 40.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.858824, 0.156863, 0.109804, 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 7 )
text = "Param√®tres"
script = ExtResource( 2 )
btn_icon = ExtResource( 1 )

[node name="bg_icon" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 36, 36 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="left_dot" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -4.0
margin_right = 8.0
margin_bottom = 4.0
color = Color( 0.858824, 0.156863, 0.109804, 1 )

[node name="right_dot" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -4.0
margin_bottom = 4.0
color = Color( 0.858824, 0.156863, 0.109804, 1 )

[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
